--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,25 @@
---- #YAML:1.0
-name:               Geo-Distance-XS
-version:            0.08
-abstract:           speed up Geo::Distance
+---
+abstract: 'speed up Geo::Distance'
 author:
-    - gray <gray@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'gray <gray@cpan.org>'
 build_requires:
-    Test::More:  0.82
-requires:
-    Geo::Distance:  0.16
-    Test::More:     0
-resources:
-    repository:  http://github.com/gray/geo-distance-xs
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  Test::More: 0.82
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.58, CPAN::Meta::Converter version 2.110930'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Geo-Distance-XS
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Geo::Distance: 0.16
+  XSLoader: 0
+resources:
+  repository: http://github.com/gray/geo-distance-xs
+version: 0.09
