--- a/META.yml
+++ b/META.yml
@@ -3,23 +3,23 @@ abstract: 'speed up Geo::Distance'
 author:
   - 'gray <gray@cpan.org>'
 build_requires:
-  Test::More: 0.82
+  Test::More: '0.82'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Geo-Distance-XS
 no_index:
   directory:
     - t
     - inc
 requires:
-  Geo::Distance: 0.16
-  XSLoader: 0
+  Geo::Distance: '0.16'
+  XSLoader: '0'
 resources:
   repository: http://github.com/gray/geo-distance-xs
-version: 0.11
+version: '0.12'
